[package]
name = "bevy_mod_scripting"
version = "0.15.0"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Multi language scripting in Bevy"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "readme.md"
include = ["readme.md", "/src", "/examples", "/assets", "LICENSE", "/badges"]

[lib]
name = "bevy_mod_scripting"
path = "src/lib.rs"
bench = false

[package.metadata."docs.rs"]
features = ["lua54", "rhai"]

[features]
default = [
    "core_functions",
    "bevy_ecs_bindings",
    "bevy_input_bindings",
    "bevy_math_bindings",
    "bevy_reflect_bindings",
    "bevy_time_bindings",
    "bevy_transform_bindings",
]

lua = [
    "bevy_mod_scripting_lua",
    "bevy_mod_scripting_functions/lua_bindings",
] ## lua
# one of these must be selected
lua51 = ["bevy_mod_scripting_lua/lua51", "lua"]
lua52 = ["bevy_mod_scripting_lua/lua52", "lua"]
lua53 = ["bevy_mod_scripting_lua/lua53", "lua"]
lua54 = ["bevy_mod_scripting_lua/lua54", "lua"]
luajit = ["bevy_mod_scripting_lua/luajit", "lua"]
luajit52 = ["bevy_mod_scripting_lua/luajit52", "lua"]
luau = ["bevy_mod_scripting_lua/luau", "lua"]

# bindings 
core_functions = ["bevy_mod_scripting_functions/core_functions"]
bevy_ecs_bindings = ["bevy_mod_scripting_functions/bevy_ecs"]
bevy_input_bindings = ["bevy_mod_scripting_functions/bevy_input"]
bevy_math_bindings = ["bevy_mod_scripting_functions/bevy_math"]
bevy_reflect_bindings = ["bevy_mod_scripting_functions/bevy_reflect"]
bevy_time_bindings = ["bevy_mod_scripting_functions/bevy_time"]
bevy_transform_bindings = ["bevy_mod_scripting_functions/bevy_transform"]

# optional
unsafe_lua_modules = ["bevy_mod_scripting_lua?/unsafe_lua_modules"]
mlua_serialize = ["bevy_mod_scripting_lua?/mlua_serialize"]
mlua_macros = ["bevy_mod_scripting_lua?/mlua_macros"]
mlua_async = ["bevy_mod_scripting_lua?/mlua_async"]


## rhai
rhai = ["bevy_mod_scripting_rhai", "bevy_mod_scripting_functions/rhai_bindings"]

## rune
# rune = ["bevy_mod_scripting_rune"]

### Profiling
profile_with_tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true }
bevy_mod_scripting_core = { workspace = true }
bevy_mod_scripting_lua = { path = "crates/languages/bevy_mod_scripting_lua", version = "0.15.0", optional = true }
bevy_mod_scripting_rhai = { path = "crates/languages/bevy_mod_scripting_rhai", version = "0.15.0", optional = true }
# bevy_mod_scripting_rune = { path = "crates/languages/bevy_mod_scripting_rune", version = "0.9.0-alpha.2", optional = true }
bevy_mod_scripting_functions = { workspace = true }
bevy_mod_scripting_derive = { workspace = true }

[workspace.dependencies]
profiling = { version = "1.0" }

bevy = { version = "0.16.0", default-features = false }
bevy_math = { version = "0.16.0" }
bevy_reflect = { version = "0.16.0" }
bevy_mod_scripting_core = { path = "crates/bevy_mod_scripting_core", version = "0.15.0" }
bevy_mod_scripting_functions = { path = "crates/bevy_mod_scripting_functions", version = "0.15.0", default-features = false }
bevy_mod_scripting_derive = { path = "crates/bevy_mod_scripting_derive", version = "0.15.0" }

# test utilities
script_integration_test_harness = { path = "crates/testing_crates/script_integration_test_harness" }
test_utils = { path = "crates/testing_crates/test_utils" }

[dev-dependencies]
bevy = { workspace = true, default-features = true, features = ["std"] }
clap = { version = "4.1", features = ["derive"] }
rand = "0.9.1"
criterion = { version = "0.5" }
ladfile_builder = { path = "crates/ladfile_builder", version = "0.5.0" }
script_integration_test_harness = { workspace = true }
test_utils = { workspace = true }
libtest-mimic = "0.8"
tracing-tracy = "0.11"
regex = "1.11"
bevy_console = "0.14"

[workspace]
members = [
    "crates/bevy_mod_scripting_core",
    "crates/languages/bevy_mod_scripting_lua",
    "crates/languages/bevy_mod_scripting_rhai",
    # "crates/languages/bevy_mod_scripting_rune",
    "crates/bevy_mod_scripting_functions",
    "crates/testing_crates/test_utils",
    "crates/testing_crates/script_integration_test_harness",
    "crates/bevy_mod_scripting_derive",
    "crates/ladfile",
    "crates/lad_backends/mdbook_lad_preprocessor",
    "crates/ladfile_builder",
    "crates/bevy_system_reflection",
]
resolver = "2"
exclude = ["crates/bevy_api_gen", "crates/macro_tests", "xtask"]

[profile.dev]
debug = 1
opt-level = 1

[profile.dev-debug]
inherits = "dev"
debug = true
opt-level = 0

[profile.dev.package."*"]
debug = 0
opt-level = 3

[profile.ephemeral-build]
inherits = "dev"
opt-level = 2
codegen-units = 8
incremental = false
debug = false

# [profile.ephemeral-coverage]
# inherits = "ephemeral-build"
# debug = true

[profile.release-with-debug]
inherits = "release"
debug = true

[[example]]
name = "game_of_life"
path = "examples/game_of_life.rs"
required-features = [
    "lua54",
    "rhai",
    "bevy/file_watcher",
    "bevy/multi_threaded",
]

[[example]]
name = "docgen"
path = "examples/docgen.rs"
required-features = []

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"

[workspace.lints.rust]
missing_docs = "deny"

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "script_tests"
harness = false
