[package]
name = "bevy_analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-bevy-analyzer"
path = "src/main.rs"

[[bin]]
name = "bevy-analyzer-driver"
path = "src/driver.rs"


[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
log = "0.4"
env_logger = "0.11"
rustc_plugin = "=0.9.0-nightly-2024-01-24"
indexmap = "2"
tempdir = "0.3"
cargo_metadata = "0.18"
rustc_data_structures = "0"
serde_json = "1"

[workspace]
