[package]
name = "bevy_api_gen"
version = "0.3.0"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A code generator creating macro invocations to support the changing bevy API"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua", "code-generation"]
categories = ["game-development"]
readme = "readme.md"

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", search = '^version\s*=\s*.*$', replace = "version = \"{{version}}\"", exactly = 1 },
]

[lib]
name = "bevy_api_gen_lib"
path = "src/lib.rs"

[[bin]]
name = "bevy_api_gen"
path = "src/main.rs"


[dependencies]
gtrie = "0.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
sailfish = "0.8.3"
rustdoc-types = "0.23.0"
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.137"
indexmap = { version = "2.1.0", features = ["serde"] }
prettyplease = "0.2.15"
wildmatch = "2.1.1"
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }
