[package]
name = "bevy_mod_scripting"
version = "0.1.0"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Bevy plugin for enabling scripting"
repository = "https://github.com/makspll/bevy_scripting"
homepage = "https://github.com/makspll/bevy_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "../readme.md"
rust-version = "1.61.0"

[lib]
name = "bevy_mod_scripting"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["lua54","teal","unsafe_lua_modules"]

[features]

# if enabled enables documentation updating in optimized builds
doc_always = []

# enables loading possibly unsafe lua modules by lua scripts
unsafe_lua_modules = []

# enable teal utilities
teal = []


lua51 = ["tealr/mlua_lua51"]
lua52 = ["tealr/mlua_lua52"]
lua53 = ["tealr/mlua_lua53"]
lua54 = ["tealr/mlua_lua54"]
luajit = ["tealr/mlua_luajit"]
luajit52 = ["tealr/mlua_luajit52"]

mlua_serialize = ["tealr/mlua_serialize"]
mlua_macros = ["tealr/mlua_macros"]

[dependencies]
bevy = { version = "0.8.0"}
tealr = { version = "0.9.0-alpha1", features=["mlua_vendored","mlua_send"]}
rhai = { version = "1.7.0", features = ["sync"] }
anyhow = "1.0.57"
once_cell = "1.10.0"
bevy_event_priority = { path = "../bevy_event_priority" }
thiserror = "1.0.31"
lazy_static = "1.4.0"
paste = "1.0.7"
parking_lot = "0.12.1"
bevy_mod_scripting_derive = {path = "../bevy_mod_scripting_derive"}
serde_json = "1.0.81"
num-traits = "0.2.15"
serde = { version = "1", features = ["derive"] }
smallvec = "1.9.0"

[dev-dependencies]
# bevy_console = { git = "https://github.com/OnlyGraphs/bevy-console" }
# bevy_asset_loader = {git = "https://github.com/NiklasEi/bevy_asset_loader", features = ["dynamic_assets"]}
rand = "0.8.5"
serde = "1.0.137"
criterion = "0.3"


# needs bevy 0.8 support from console
# [[example]]
# name = "console_integration_lua"
# path = "examples/console_integration_lua.rs"
# required-features = ["lua54"]


# [[example]]
# name = "console_integration_rhai"
# path = "examples/console_integration_rhai.rs"

[[example]]
name = "complex_game_loop_lua"
path = "examples/lua/complex_game_loop.rs"
required-features = ["lua54"]


[[example]]
name = "event_recipients_lua"
path = "examples/lua/event_recipients.rs"

[[example]]
name = "documentation_gen_lua"
path = "examples/lua/documentation_gen_lua.rs"
required-features = ["lua54"]


[[example]]
name = "bevy_api_lua"
path = "examples/lua/bevy_api.rs"
required-features = ["lua54"]

[[example]]
name = "wrappers"
path = "examples/wrappers.rs"
required-features = ["lua54"]

