[package]
name = "bevy_mod_scripting_derive"
version = "0.1.1"
authors = ["Maksymilian Mozolewski <makspl17@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Derive macros for bevy_mod_scripting"
repository = "https://github.com/makspll/bevy_mod_scripting"
homepage = "https://github.com/makspll/bevy_mod_scripting"
keywords = ["bevy", "gamedev", "scripting", "lua"]
categories = ["game-development"]
readme = "readme.md"

[package.metadata.release]
pre-release-replacements = [
    {file="Cargo.toml", search='^version\s*=\s*.*$', replace="version = \"{{version}}\"", exactly=1},
    {file="Cargo.toml", search='^(?P<h>bevy_mod_scripting_common\s*=.*)version\s*=\s*".*"(?P<t>.*)$', replace="${h}version = \"{{version}}\"${t}", exactly=1},
]

[lib]
name = "bevy_mod_scripting_derive"
proc-macro = true
path = "src/lib.rs"


[dependencies]
bevy_mod_scripting_common = {path = "../bevy_mod_scripting_common", version = "0.2.0" }
paste = "1.0.7"
syn = {version="1.0.57",features=["full","fold","extra-traits"]}
quote = "1.0.8"
proc-macro2 = "1.0"
convert_case = "0.5.0"
rustdoc-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.137"
indexmap = {version= "1.9.1", features= ["serde"]}
